Jobda/src/main/kotlin/com/example/jobda/infrastructure/error/response/ErrorResponse.kt
package com.example.jobda.infrastructure.error.response

/**
 *
 * ErrorResponse
 *
 * @author ljcha
 * @date 2022-11-03
 * @version 1.0.0
 **/
data class ErrorResponse(
    val status: Int,
    val message: String
)
